--- a/src/app/components/match-scoreboard-display/match-scoreboard-display.component.html
+++ b/src/app/components/match-scoreboard-display/match-scoreboard-display.component.html
@@ -12,10 +12,12 @@
           [gameClock]="gameclock.gameclock!"
         ></app-scoreboard-display-flat>
         <app-sponsor-display-flat
-          *ngIf="data.scoreboard_data?.is_sponsor_line"
+          *ngIf="data.scoreboard_data?.is_sponsor_line || false"
         ></app-sponsor-display-flat>
+        <app-match-sponsor-line-display-flat
+          *ngIf="data.scoreboard_data?.is_match_sponsor_line || false"
+        ></app-match-sponsor-line-display-flat>
       </div>
-
     }
   }
 }
