--- a/src/styles.less
+++ b/src/styles.less
@@ -296,6 +296,9 @@ aside > * {
   .two_col_container_tournament {
     grid-template-columns: auto;
   }
+  .two_col_container_match {
+    grid-template-columns: auto;
+  }
 }
 
 .add-new-button {
