--- a/src/app/components/player-match/add-edit-player-match-table/add-edit-player-match-table.component.less
+++ b/src/app/components/player-match/add-edit-player-match-table/add-edit-player-match-table.component.less
@@ -14,11 +14,11 @@
   display: grid;
   justify-content: start;
   align-items: center;
-  grid-template-columns:
-    minmax(70px, 0.2fr) minmax(150px, 0.5fr) minmax(65px, 0.2fr),
-    minmax(50px, 0.1fr);
-  grid-template-rows: auto auto;
-
+  grid-template-columns: minmax(55px, 0.2fr) minmax(140px, 0.6fr) minmax(
+      65px,
+      0.2fr
+    );
+  grid-template-rows: auto auto auto;
   background-color: #f2f2f2;
   border-radius: 5px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -34,7 +34,11 @@
 }
 
 .expand {
-  grid-column: span 4;
+  grid-column: span 3;
+}
+
+.span-3 {
+  grid-column: span 2;
 }
 
 .actions {
@@ -91,7 +95,7 @@
 
 .player-photo-short-profile {
   border-radius: 10px;
-  grid-row: span 2;
+  grid-row: span 3;
 }
 
 // @media screen and (max-width: 800px) {
