--- a/src/app/shared/ui/dialogs/delete-dialog/delete-dialog.component.html
+++ b/src/app/shared/ui/dialogs/delete-dialog/delete-dialog.component.html
@@ -1,6 +1,9 @@
 <ng-template
   let-observer
-  [tuiDialogOptions]="{label: action.toUpperCase() + ' ' + item.toUpperCase() + '?' , size: 'm'}"
+  [tuiDialogOptions]="{
+    label: action.toUpperCase() + ' ' + item?.toUpperCase() || '' + '?',
+    size: 'm'
+  }"
   [(tuiDialog)]="open"
 >
   <div class="tui-form__row flex__fullwidth_center">
@@ -8,14 +11,18 @@
       [formGroup]="itemDeleteForm"
       (ngSubmit)="onSubmit(); observer.complete()"
     >
-      <p style="text-align: center; padding:10px; background-color: var(--tui-negative-hover)" [id]="dialogId">
+      <p
+        style="
+          text-align: center;
+          padding: 10px;
+          background-color: var(--tui-negative-hover);
+        "
+        [id]="dialogId"
+      >
         All {{ item | uppercase }}'s stats will be lost!
       </p>
-      <p style="text-align: center; padding:10px;">
-        <tui-checkbox-labeled
-          formControlName="checkboxToAction"
-          size="l"
-        >
+      <p style="text-align: center; padding: 10px">
+        <tui-checkbox-labeled formControlName="checkboxToAction" size="l">
           I have read understood and confirm my agreement.
         </tui-checkbox-labeled>
       </p>
